<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page_2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPage2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/toolbar">

        <ImageView
            android:id="@+id/imageViewMenu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_white"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/menu"/>

        <TextView
            android:id="@+id/textViewSASamia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_a_by_samia"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="8dp"/>

        <ImageView
            android:id="@+id/imageViewSearch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_white"
            android:layout_marginTop="8dp"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:contentDescription="@string/search"/>

        <ImageView
            android:id="@+id/imageViewCart2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shopping_cart_white"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/shopping_cart"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarPage2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutIndicator2"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        app:layout_constraintTop_toBottomOf="@id/viewPager2"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:orientation="horizontal"/>

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutIndicator2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/textViewSABySamia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="S.A BY SAMIA"
        android:textSize="34sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/textViewNewArrivals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NEW ARRIVALS"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/textViewSABySamia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textViewNewArrivals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>